# phi4-mm-playground

./: .gitignore  README.md  phi4_multimodal_onnx_inference.py  pyproject.toml
